Docker support (#6)